This is my most up to date code for the C assignment as of 03/20/16. My code is passing 18 tests out of 25 and FAILS to pass test 13(test_pool_scenario13) which I did not figure out how to pass. If, however, I comment out the line for the test 13 (test_pool_scenario13) in the test_suite.c, I'm passing all of the tests.
=>My current program submission is passing 24 tests out of 25 and IS ONLY FAILING on passing test 13 (test_pool_scenario13) out of 25 tests total. Other 24 pass.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES
     main.c mem_pool.c test_suite.h test_suite.c)
 
 add_library(libcmocka SHARED IMPORTED)
-set_property(TARGET libcmocka PROPERTY IMPORTED_LOCATION /usr/local/lib/libcmocka.so.0.3.1)
+set_property(TARGET libcmocka PROPERTY IMPORTED_LOCATION /home/vm/cmocka-1.0.1/build/src/libcmocka.so.0.3.1)
 
 add_executable(denver_os_pa_c ${SOURCE_FILES})
 
